k8s/base/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  type: NodePort
  selector:
    app: ui
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30030
      protocol: TCP
